# quadsquad2026

./: .gitignore  CMakeLists.txt  README.md
include/: Configuration.h  Constants.h  InverseKinematics.h  Kinematics.h  MotionController.h  Quadcopter.h  Util.h
src/: Kinematics.cpp  Quadcopter.cpp  Util.cpp  simulate.cpp  simulator.cpp  test.cpp
src/QCLib/: InverseKinematics.cpp  Kinematics.cpp  MotionController.cpp  Quadcopter.cpp  Util.cpp
